--- a/scss/components/UI/__custom-checkbox.scss
+++ b/scss/components/UI/__custom-checkbox.scss
@@ -12,7 +12,8 @@
         display: flex;
         align-items: center;
         font-size: 12px;
-        padding-left: 22px;
+        padding-top: 2px;
+        padding-left: 25px;
         
         &:hover{
             .checkmark{
@@ -38,7 +39,7 @@
     top: 50%;
     transform: translateY(-50%);
     left: 0;
-    height: 14px;
+    height: 15px;
     width: 15px;
     background-color: transparent;
     border: 1px solid #fff;
