--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@
   margin-bottom: 8px;
 }
 
+@media screen and (max-width: 576px) {
+  .sub-title {
+    font-size: 19px;
+  }
+}
+
 .inner-desc {
   text-align: center;
   line-height: 1.5;
@@ -44,6 +50,13 @@
   }
 }
 
+@media screen and (max-width: 576px) {
+  .sub-desc {
+    font-size: 13px;
+    line-height: 1.6;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .container.form-container {
     max-width: 900px !important;
@@ -55,6 +68,12 @@
   width: 93px;
   object-fit: contain;
   object-position: center center;
+}
+
+@media screen and (max-width: 576px) {
+  .form-ico {
+    height: 66px;
+  }
 }
 
 a:visited, a:link, a:hover, a:active {
@@ -118,7 +137,6 @@ u {
   .form-control {
     font-size: 16px;
     padding-bottom: 6px;
-    margin-bottom: 22px;
   }
 }
 
@@ -169,6 +187,12 @@ label.error {
   margin-bottom: 25px;
 }
 
+@media screen and (max-width: 992px) {
+  .form-group {
+    margin-bottom: 21px;
+  }
+}
+
 .btn-main {
   background-color: #FBF166;
   color: #472D72;
@@ -178,6 +202,13 @@ label.error {
   font-weight: 700;
   border-radius: 6px;
   transition: all 0.4s;
+}
+
+@media screen and (max-width: 992px) {
+  .btn-main {
+    font-size: 17px;
+    padding: 20px 30px;
+  }
 }
 
 .btn-main:hover {
@@ -226,7 +257,6 @@ label.error {
   display: flex;
   align-items: center;
   font-size: 12px;
-  padding-top: 2px;
   padding-left: 25px;
 }
 
@@ -247,13 +277,18 @@ label.error {
 /* Create a custom checkbox */
 .checkmark {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 2px;
   left: 0;
   height: 15px;
   width: 15px;
   background-color: transparent;
   border: 1px solid #fff;
+}
+
+@media screen and (max-width: 992px) {
+  .checkmark {
+    top: 5px;
+  }
 }
 
 /* On mouse-over, add a grey background color */
@@ -292,6 +327,13 @@ label.error {
   border-radius: 1px;
 }
 
+@media screen and (max-width: 992px) {
+  .inputfile + div label {
+    flex-direction: column;
+    font-size: 16px;
+  }
+}
+
 .inputfile + div label:after {
   content: 'Buscar';
   display: block;
@@ -301,6 +343,12 @@ label.error {
   font-weight: 400;
   padding: 5px 34px;
   transition: all 0.4s;
+}
+
+@media screen and (max-width: 992px) {
+  .inputfile + div label:after {
+    margin-top: 13px;
+  }
 }
 
 .inputfile:focus + div label {
