--- a/scss/components/UI/__file-input.scss
+++ b/scss/components/UI/__file-input.scss
@@ -21,6 +21,11 @@
     padding: 19px 15px;
     font-size: 18px;
     border-radius: 1px;
+
+    @media screen and (max-width: $bp-LG){
+        flex-direction: column;
+        font-size: 16px;
+    }
     
     &:after{
         content: 'Buscar';
@@ -31,6 +36,10 @@
         font-weight: 400;
         padding: 5px 34px;
         transition: all 0.4s;
+
+        @media screen and (max-width: $bp-LG){
+            margin-top: 13px;
+        }
     }
 }
 
