--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -13,7 +13,6 @@
     @media screen and (max-width: $bp-LG){
         font-size: 16px;
         padding-bottom: 6px;
-        margin-bottom: 22px;
     }
 
     &:focus {
@@ -61,4 +60,8 @@ label.error {
     display: flex;
     flex-direction: column;
     margin-bottom: 25px;
+
+    @media screen and (max-width: $bp-LG){
+        margin-bottom: 21px;
+    }
 }
