--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -22,6 +22,10 @@
         border-color: #fff;
     }
 
+    &:disabled{
+        background: none;
+    }
+
     &::placeholder{
         color: #fff;
     }
@@ -42,7 +46,7 @@ select.form-control{
         padding: 30px 15px;
 
         &:disabled{
-            opacity: 0;
+            background-color: rgb(211, 211, 211);
         }
     }
 }
